--- a/content/Week 15~18.html
+++ b/content/Week 15~18.html
@@ -154,27 +154,10 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">主題 << <a href='主題.html'>Previous</a> <a href='Week 7.html'>Next</a> >> Week 7<br /><h1>Week 6</h1>
-<h4>Online education</h4>
-<p>線上直播: Youtube + Portable OBS</p>
-<p>線上開會:<span> </span><a href="https://meet.google.com/">https://meet.google.com</a> </p>
-<hr/>
-<h4>讓手機可以利用電腦熱點上網</h4>
-<p>採用 <a href="https://www.tp-link.com/us/home-networking/usb-adapter/tl-wn725n/">https://www.tp-link.com/us/home-networking/usb-adapter/tl-wn725n/</a></p>
-<p>將此一 USB Wifi adapter 連接電腦後, 若網路為 IPv4 協定時, 可以透過"設定 -&gt; 網路和網際網路 -&gt; 行動熱點", 選擇開啟並編輯"網路名稱與網路密碼"後, 讓至多 8 台手機透過熱點連線上網.</p>
-<p>但是因為目前 Windows 10 並<a href="https://answers.microsoft.com/en-us/windows/forum/all/support-ipv6-in-mobile-hotspot-network-sharing/8801ea57-c6dc-4c10-afe6-192879a85835">未提供 IPv6 網路協定下的網路熱點功能</a>, 因此在純 IPv6 網路協定下無法使用"行動熱點"服務.</p>
-<hr/>
-<p>利用手機鏡頭當作 webcam:</p>
-<p>Android:<span> </span><a href="https://www.digitalcitizen.life/turn-android-smartphone-webcam-windows">https://www.digitalcitizen.life/turn-android-smartphone-webcam-windows</a> <br/>iPhone:<span> </span><a href="https://www.makeuseof.com/tag/use-your-iphone-as-a-webcam-heres-how-ios/">https://www.makeuseof.com/tag/use-your-iphone-as-a-webcam-heres-how-ios/</a> </p>
-<hr/>
-<h4>需要 clone 個人倉儲時:</h4>
-<p>git clone --recurse-submodules 倉儲_url.git</p>
-<p>例如: git clone --recurse-submodules<span> </span><a href="https://github.com/mdecourse/wcmj2020.git">https://github.com/mdecourse/wcmj2020.git</a></p>
-<h4>現場直播的 audio 錄音設定</h4>
-<p>在電腦輔助設計室進行直播時, 由於現場有擴音設備, 因此採用 OBS 串流至 Youtube 的最佳收音並非從 Webcam 的麥克風, 而是從擴音器以 audio outpu 連接到電腦的麥克風插槽, 然後將 OBS 的 audio 設定為從電腦的麥克風收音.</p>
-<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" data-mce-fragment="1" frameborder="0" height="315" src="https://www.youtube.com/embed/5qTYqHULS7A" width="560"></iframe></p>
-<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" data-mce-fragment="1" frameborder="0" height="315" src="https://www.youtube.com/embed/xYZLwLaUG6U" width="560"></iframe></p>
-<br />主題 << <a href='主題.html'>Previous</a> <a href='Week 7.html'>Next</a> >> Week 7</div>
+    <div id="tipue_search_content">編輯 Blogger 文章 << <a href='編輯 Blogger 文章.html'>Previous</a> <a href='資料來源.html'>Next</a> >> 資料來源<br /><h1>Week 15~18</h1>
+<p>各分組除了必須將 W1-W14 週的所有上課內容, 以圖文及影音資料加以整理在個人及分組倉儲、網站及簡報外.</p>
+<p>可以自選另一主題, 將分組協同的過程與內容整理在個人與分組的倉儲資料中.</p>
+<br />編輯 Blogger 文章 << <a href='編輯 Blogger 文章.html'>Previous</a> <a href='資料來源.html'>Next</a> >> 資料來源</div>
         
     <!-- footer -->
       <div class="container">
