--- a/content/三個檔案設定的修改.html
+++ b/content/三個檔案設定的修改.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='有關本網站.html'>有關本網站</a><li class='has-children'><a href='主題.html'>主題</a><ul class='dropdown'><li><a href='Week 6.html'>Week 6</a><li><a href='Week 7.html'>Week 7</a><li><a href='Week 8.html'>Week 8</a><li class='has-children'><a href='Week 9.html'>Week 9</a><ul class='dropdown'><li><a href='電腦軟硬體簡介.html'>電腦軟硬體簡介</a><li><a href='網路架構與設定的簡介.html'>網路架構與設定的簡介</a></li></ul><li class='has-children'><a href='Week 10.html'>Week 10</a><ul class='dropdown'><li><a href='以SSH維護倉儲.html'>以SSH維護倉儲</a></li></ul><li class='has-children'><a href='Week 11.html'>Week 11</a><ul class='dropdown'><li><a href='Leo Editor 基本用法.html'>Leo Editor 基本用法</a><li><a href='三個檔案設定的修改.html'>三個檔案設定的修改</a></li></li></ul></ul><li><a href='資料來源.html'>資料來源</a></li>
+                     <li><a href='有關本網站.html'>有關本網站</a><li class='has-children'><a href='主題.html'>主題</a><ul class='dropdown'><li><a href='Week 6.html'>Week 6</a><li><a href='Week 7.html'>Week 7</a><li><a href='Week 8.html'>Week 8</a><li class='has-children'><a href='Week 9.html'>Week 9</a><ul class='dropdown'><li><a href='電腦軟硬體簡介.html'>電腦軟硬體簡介</a><li><a href='網路架構與設定的簡介.html'>網路架構與設定的簡介</a></li></ul><li class='has-children'><a href='Week 10.html'>Week 10</a><ul class='dropdown'><li><a href='以SSH維護倉儲.html'>以SSH維護倉儲</a></li></ul><li class='has-children'><a href='Week 11.html'>Week 11</a><ul class='dropdown'><li><a href='Leo Editor 基本用法.html'>Leo Editor 基本用法</a><li><a href='三個檔案設定的修改.html'>三個檔案設定的修改</a></li></ul><li class='has-children'><a href='Week 12~13.html'>Week 12~13</a><ul class='dropdown'><li><a href='W12.html'>W12</a><li><a href='W13.html'>W13</a></li></ul><li class='has-children'><a href='Week 14.html'>Week 14</a><ul class='dropdown'><li><a href='新增 blogger 文章.html'>新增 blogger 文章</a><li><a href='編輯 Blogger 文章.html'>編輯 Blogger 文章</a></li></ul><li><a href='Week 15~18.html'>Week 15~18</a></li></ul><li><a href='資料來源.html'>資料來源</a></li>
                       </ul>
                 </nav>
               </div>
@@ -154,11 +154,11 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Leo Editor 基本用法 << <a href='Leo Editor 基本用法.html'>Previous</a> <a href='資料來源.html'>Next</a> >> 資料來源<br /><h1>三個檔案設定的修改</h1>
+    <div id="tipue_search_content">Leo Editor 基本用法 << <a href='Leo Editor 基本用法.html'>Previous</a> <a href='Week 12~13.html'>Next</a> >> Week 12~13<br /><h1>三個檔案設定的修改</h1>
 <p>在共用檔案中，修改AUTHOR = '使用者名稱或學號'以及SITENAME = '自己想使用的名稱'</p>
 <p>在遠端檔案中，修改SITEURL = 'https://學號.github.io/wcmj2020/blog'</p>
 <p>近端檔案目前不用修改</p>
-<br />Leo Editor 基本用法 << <a href='Leo Editor 基本用法.html'>Previous</a> <a href='資料來源.html'>Next</a> >> 資料來源</div>
+<br />Leo Editor 基本用法 << <a href='Leo Editor 基本用法.html'>Previous</a> <a href='Week 12~13.html'>Next</a> >> Week 12~13</div>
         
     <!-- footer -->
       <div class="container">
