--- a/content/資料來源.html
+++ b/content/資料來源.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='有關本網站.html'>有關本網站</a><li class='has-children'><a href='主題.html'>主題</a><ul class='dropdown'><li><a href='Week 6.html'>Week 6</a><li><a href='Week 7.html'>Week 7</a><li><a href='Week 8.html'>Week 8</a><li class='has-children'><a href='Week 9.html'>Week 9</a><ul class='dropdown'><li><a href='電腦軟硬體簡介.html'>電腦軟硬體簡介</a><li><a href='網路架構與設定的簡介.html'>網路架構與設定的簡介</a></li></ul><li class='has-children'><a href='Week 10.html'>Week 10</a><ul class='dropdown'><li><a href='以SSH維護倉儲.html'>以SSH維護倉儲</a></li></ul><li class='has-children'><a href='Week 11.html'>Week 11</a><ul class='dropdown'><li><a href='Leo Editor 基本用法.html'>Leo Editor 基本用法</a><li><a href='三個檔案設定的修改.html'>三個檔案設定的修改</a></li></li></ul></ul><li><a href='資料來源.html'>資料來源</a></li>
+                     <li><a href='有關本網站.html'>有關本網站</a><li class='has-children'><a href='主題.html'>主題</a><ul class='dropdown'><li><a href='Week 6.html'>Week 6</a><li><a href='Week 7.html'>Week 7</a><li><a href='Week 8.html'>Week 8</a><li class='has-children'><a href='Week 9.html'>Week 9</a><ul class='dropdown'><li><a href='電腦軟硬體簡介.html'>電腦軟硬體簡介</a><li><a href='網路架構與設定的簡介.html'>網路架構與設定的簡介</a></li></ul><li class='has-children'><a href='Week 10.html'>Week 10</a><ul class='dropdown'><li><a href='以SSH維護倉儲.html'>以SSH維護倉儲</a></li></ul><li class='has-children'><a href='Week 11.html'>Week 11</a><ul class='dropdown'><li><a href='Leo Editor 基本用法.html'>Leo Editor 基本用法</a><li><a href='三個檔案設定的修改.html'>三個檔案設定的修改</a></li></ul><li class='has-children'><a href='Week 12~13.html'>Week 12~13</a><ul class='dropdown'><li><a href='W12.html'>W12</a><li><a href='W13.html'>W13</a></li></ul><li class='has-children'><a href='Week 14.html'>Week 14</a><ul class='dropdown'><li><a href='新增 blogger 文章.html'>新增 blogger 文章</a><li><a href='編輯 Blogger 文章.html'>編輯 Blogger 文章</a></li></ul><li><a href='Week 15~18.html'>Week 15~18</a></li></ul><li><a href='資料來源.html'>資料來源</a></li>
                       </ul>
                 </nav>
               </div>
@@ -154,9 +154,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">三個檔案設定的修改 << <a href='三個檔案設定的修改.html'>Previous</a> <br /><h1>資料來源</h1>
+    <div id="tipue_search_content">Week 15~18 << <a href='Week 15~18.html'>Previous</a> <br /><h1>資料來源</h1>
 <p><span>Web si (網站te): </span><a href="https://mde.tw/wcmj2020">https://mde.tw/wcmj2020</a><span> </span></p>
-<p>指導老師:嚴家銘</p><br />三個檔案設定的修改 << <a href='三個檔案設定的修改.html'>Previous</a> </div>
+<p>指導老師:嚴家銘</p><br />Week 15~18 << <a href='Week 15~18.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
