--- a/content/Week 15~18.html
+++ b/content/Week 15~18.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='有關本網站.html'>有關本網站</a><li class='has-children'><a href='主題.html'>主題</a><ul class='dropdown'><li><a href='Week 6.html'>Week 6</a><li><a href='Week 7.html'>Week 7</a><li><a href='Week 8.html'>Week 8</a><li class='has-children'><a href='Week 9.html'>Week 9</a><ul class='dropdown'><li><a href='電腦軟硬體簡介.html'>電腦軟硬體簡介</a><li><a href='網路架構與設定的簡介.html'>網路架構與設定的簡介</a></li></ul><li class='has-children'><a href='Week 10.html'>Week 10</a><ul class='dropdown'><li><a href='以SSH維護倉儲.html'>以SSH維護倉儲</a></li></ul><li class='has-children'><a href='Week 11.html'>Week 11</a><ul class='dropdown'><li><a href='Leo Editor 基本用法.html'>Leo Editor 基本用法</a><li><a href='三個檔案設定的修改.html'>三個檔案設定的修改</a></li></ul><li class='has-children'><a href='Week 12~13.html'>Week 12~13</a><ul class='dropdown'><li><a href='W12.html'>W12</a><li><a href='W13.html'>W13</a></li></ul><li class='has-children'><a href='Week 14.html'>Week 14</a><ul class='dropdown'><li><a href='新增 blogger 文章.html'>新增 blogger 文章</a><li><a href='編輯 Blogger 文章.html'>編輯 Blogger 文章</a></li></ul><li><a href='Week 15~18.html'>Week 15~18</a></li></ul><li><a href='資料來源.html'>資料來源</a></li>
+                     <li><a href='有關本網站.html'>有關本網站</a><li class='has-children'><a href='主題.html'>主題</a><ul class='dropdown'><li><a href='Week 6.html'>Week 6</a><li><a href='Week 7.html'>Week 7</a><li><a href='Week 8.html'>Week 8</a><li class='has-children'><a href='Week 9.html'>Week 9</a><ul class='dropdown'><li><a href='電腦軟硬體簡介.html'>電腦軟硬體簡介</a><li><a href='網路架構與設定的簡介.html'>網路架構與設定的簡介</a></li></ul><li class='has-children'><a href='Week 10.html'>Week 10</a><ul class='dropdown'><li><a href='以SSH維護倉儲.html'>以SSH維護倉儲</a></li></ul><li class='has-children'><a href='Week 11.html'>Week 11</a><ul class='dropdown'><li><a href='Leo Editor 基本用法.html'>Leo Editor 基本用法</a><li><a href='三個檔案設定的修改.html'>三個檔案設定的修改</a></li></ul><li class='has-children'><a href='Week 12~13.html'>Week 12~13</a><ul class='dropdown'><li><a href='W12.html'>W12</a><li><a href='W13.html'>W13</a></li></ul><li class='has-children'><a href='Week 14.html'>Week 14</a><ul class='dropdown'><li><a href='新增 blogger 文章.html'>新增 blogger 文章</a><li><a href='編輯 Blogger 文章.html'>編輯 Blogger 文章</a></li></ul><li class='has-children'><a href='Week 15~18.html'>Week 15~18</a><ul class='dropdown'><li><a href='未來規劃.html'>未來規劃</a></li></li></ul></ul><li><a href='資料來源.html'>資料來源</a></li>
                       </ul>
                 </nav>
               </div>
@@ -154,10 +154,10 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">編輯 Blogger 文章 << <a href='編輯 Blogger 文章.html'>Previous</a> <a href='資料來源.html'>Next</a> >> 資料來源<br /><h1>Week 15~18</h1>
+    <div id="tipue_search_content">編輯 Blogger 文章 << <a href='編輯 Blogger 文章.html'>Previous</a> <a href='未來規劃.html'>Next</a> >> 未來規劃<br /><h1>Week 15~18</h1>
 <p>各分組除了必須將 W1-W14 週的所有上課內容, 以圖文及影音資料加以整理在個人及分組倉儲、網站及簡報外.</p>
 <p>可以自選另一主題, 將分組協同的過程與內容整理在個人與分組的倉儲資料中.</p>
-<br />編輯 Blogger 文章 << <a href='編輯 Blogger 文章.html'>Previous</a> <a href='資料來源.html'>Next</a> >> 資料來源</div>
+<br />編輯 Blogger 文章 << <a href='編輯 Blogger 文章.html'>Previous</a> <a href='未來規劃.html'>Next</a> >> 未來規劃</div>
         
     <!-- footer -->
       <div class="container">
