--- a/content/未來規劃.html
+++ b/content/未來規劃.html
@@ -154,10 +154,17 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Week 7 << <a href='Week 7.html'>Previous</a> <a href='Week 9.html'>Next</a> >> Week 9<br /><h1>Week 8</h1>
-<p>請重新下載<span> </span><a href="https://drive.google.com/open?id=1xDTDfcHU18ipqZNbOufMkSZqibqNeL2T">wcmj2020_tool.7z</a>, 檔案大小為 435 MB, 解開壓縮後為 1.8 GB (其中包括 Mypaint, Dia 與 OBS 等).</p>
-<p>學會利用 ShareX 與 OBS 拍攝螢幕操作影片, 並將個人維護倉儲與網站的過程影片放入個人網站中.</p>
-<br />Week 7 << <a href='Week 7.html'>Previous</a> <a href='Week 9.html'>Next</a> >> Week 9</div>
+    <div id="tipue_search_content">Week 15~18 << <a href='Week 15~18.html'>Previous</a> <a href='資料來源.html'>Next</a> >> 資料來源<br /><h1>未來規劃</h1>
+<h4>二技招生</h4>
+<p><a href="https://techexpo.moe.edu.tw/search/profile_committee.php?comid=comd01">二技日間部申請入學</a></p>
+<h4>大學轉學考</h4>
+<p><a href="https://edu.law.moe.gov.tw/LawContent.aspx?id=FL008652">大學辦理轉學招生審核作業要點</a></p>
+<h4>進入職場</h4>
+<p><a href="https://edu.law.moe.gov.tw/LawContent.aspx?id=GL001611&amp;KeyWord=%e4%ba%94%e5%b0%88">教育部補助大專校院辦理五年制專科學校畢業生投入職場要點</a></p>
+<h4>畢業三年後報考碩士班</h4>
+<p><a href="https://edu.law.moe.gov.tw/LawContent.aspx?id=FL008644&amp;KeyWord=%e5%a4%a7%e5%ad%b8%e5%90%8c%e7%ad%89%e5%ad%b8%e5%8a%9b">大學同等學力第五條規定</a></p>
+<h4><a href="https://www.google.com/search?client=firefox-b-1-d&amp;ei=JgfIXpb8B9SXr7wPlOegoAY&amp;q=%E4%BA%94%E5%B0%88%E7%95%A2%E6%A5%AD%E5%87%BA%E5%9C%8B%E7%95%99%E5%AD%B8&amp;oq=%E4%BA%94%E5%B0%88%E7%95%A2%E6%A5%AD%E5%87%BA%E5%9C%8B%E7%95%99%E5%AD%B8&amp;gs_lcp=CgZwc3ktYWIQDFAAWABg3voBaABwAHgAgAEAiAEAkgEAmAEAqgEHZ3dzLXdpeg&amp;sclient=psy-ab&amp;ved=0ahUKEwiWp9b4-sfpAhXUy4sBHZQzCGQQ4dUDCAs">出國留學</a></h4>
+<br />Week 15~18 << <a href='Week 15~18.html'>Previous</a> <a href='資料來源.html'>Next</a> >> 資料來源</div>
         
     <!-- footer -->
       <div class="container">
